# SeeAct

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  index.html  requirement.txt  requirements.txt
data/online_tasks/: merged_online_90_tasks.json  sample_tasks.json  task_50_merged.json
online_eval_tool/: README.md
seeact_package/: 1-batch_example.py  10-batch_example.py  2-batch_example.py  3-batch_example.py  4-batch_example.py  5-batch_example.py  6-batch_example.py  7-batch_example.py  8-batch_example.py  9-batch_example.py  LICENSE  MANIFEST.in  example.py  pyproject.toml  requirements.txt
seeact_package/seeact/: agent.py  mark_page.js
seeact_package/seeact/data_utils/: __init__.py  format_prompt_utils.py  prompts.py
seeact_package/seeact/demo_utils/: browser_helper.py  crawler_helper.py  format_prompt.py  inference_engine.py
src/: offline_experiment.py  seeact.py
src/config/: auto_mode.toml  demo_mode.toml  online_exp.toml
src/data_utils/: dom_utils.py  evaluation_utils.py  format_prompt_utils.py  image_utils.py  prompts.py
src/demo_utils/: browser_helper.py  format_prompt.py  inference_engine.py  ranking_model.py  website_dict.py
src/offline_experiments/: offline_experiment.py
src/screenshot_generation/: element_attributes.py  image_annotation.py  textual_choices.py
src/utils/: auto_bot_input.py  autobot_input_template.txt  browser_helper.py  browser_helper_robust.py  format_prompt.py  gpt4v_api.py  llm_engines.py
static/css/: bulma-carousel.min.css  index.css  leaderboard.css
static/js/: index.js  question_card.js
(+7 files in other folders)
